--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,3 +1,9 @@
-<div>
+<app-nav-bar></app-nav-bar>
+<div class="container" style="margin-top: 140px;">
   <h1>Welcome to skiNet</h1>
+  <ul>
+    <li class="list-unstyled" *ngFor="let product of products">
+      {{product.name}}
+    </li>
+  </ul>
 </div>
