--- a/Client/src/app/shop/shop.component.html
+++ b/Client/src/app/shop/shop.component.html
@@ -1,7 +1,8 @@
-<div class="container">
+<div class="container mt-3">
   <div class="row">
     <section class="col-3">
-      <h5 class="text-warning ml-3">Sort</h5>
+      <ng-container *ngIf="types && brands">
+      <h5 class="text-warning ml-3 mt-4 mb-3">Sort</h5>
       <select class="custom-select mb-3" (change)="onSortSelected($event.target.value)">
         <option *ngFor="let sort of sortOptions"
           [value]="sort.value"
@@ -31,11 +32,12 @@
           (click) = "onTypeIdSelected(type.id)"
         >{{type.name}}</li>
       </ul>
+    </ng-container>
     </section>
     <section class="col-9">      
       <div class="d-flex justify-content-between align-items-center pb-2">
         <app-paging-header [pageSize] = "this.shopParams.pageSize" [totalCount]="this.totalCount" [pageNumber]="this.shopParams.pageNumber"></app-paging-header>
-        <div class="form-inline mt-2">
+        <div class="form-inline" *ngIf="products">
           <input class="form-control" (keyup.enter)="onSearch()" style="width: 300px" #search placeholder="Search" type="text" />
           <button (click)="onSearch()" class="btn btn-outline-primary my-2">Search</button>
           <button (click)="onReset()" class="btn btn-outline-success ml-2 my-2">Reset</button>
